# dsone

./: .gitignore  LICENSE  __init__.py  dsone.py  pyproject.toml
.spyproject/config/: workspace.ini
poetry/: get_poetry.py
tests/: test_dsone.py
