[tool.poetry]
name = "dsone"
version = "0.1.0"
description = ""
authors = ["jonzhaopeng <mobiwof@163.com>"]


packages = [
    { include = "dsone.py" },
    { include = "poetry/*.py" },
]

[tool.poetry.scripts]
lads = "dsone:cli"

[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple/"      


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# 探索开发
pyqt5-sip = "^12.9.1"
pyqt5-qt5 = "^5.15.2"
pyqtwebengine-qt5 = "^5.15.2"
git-cola = "^4.0.0-alpha.0"
spyder = "^5.3.0"
sympy = "^1.10.1"
cython = "^0.29.28"
spyder-terminal = "^1.2.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
